--- a/Docnology/Pages/patientlanding.html
+++ b/Docnology/Pages/patientlanding.html
@@ -8,38 +8,14 @@
     <title>Patient landing page</title>
     <link rel="stylesheet" href="../Styles/patient landing.css">
 </head>
-
+<script>
+    $(function(){
+        $("#header").load("header.html");
+    });
+</script>
 <body>
     <main>
-        <div class="big-wrapper light">
-            <img src="../Images/img/shape.png" alt="" class="shape">
-
-            <header>
-                <div class="container">
-                    <div class="logo">
-                        <img src="../Images/img/logo.png" alt="Logo">
-                        <h3>Docnology</h3>
-                    </div>
-
-                    <div class="links">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Profile</a></li>
-                            <li><a href="#">Chat Room</a></li>
-                            <li><a href="#">Appointments</a></li>
-                            <li><a href="#">My History</a></li>
-                            <li><a href="#">Make payment</a></li>
-                            <li><a href="Signup.html" class="btn">Log Out</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="overlay"></div>
-
-                    <div class="hamburger-menu">
-                        <div class="bar"></div>
-                    </div>
-                </div>
-            </header>
+        <div id="header"></div>
 
             <div class="showcase-area">
                 <div class="container">
